--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+div#app {
+  @apply h-full bg-white dark:bg-slate-900;
+}
